--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "knex": "^0.12.9",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
+    "socket.io": "^2.0.2",
     "sqlite3": "^3.1.8"
   }
 }
